// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <Selects /> should renders Selects with props correctly 1`] = `
<div
  className="ui-section"
  id="select"
>
  <strong
    className="ui-title"
  >
    Selects
  </strong>
  <div
    className="form-group-wrapper"
  >
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-sm-6"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Select
          </label>
          <div
            className="input-holder"
          >
            <select
              className="form-control input-sm"
              id="select1"
              name="select1"
            >
              <option
                selected={true}
              >
                Select 1
              </option>
              <option>
                Select 2
              </option>
              <option>
                Select 3
              </option>
              <option>
                Select 4
              </option>
              <option>
                Select 5
              </option>
              <option>
                Select 6
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 col-sm-6"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Select (disabled)
          </label>
          <div
            className="input-holder"
          >
            <select
              className="form-control input-sm"
              disabled={true}
              id="select2"
              name="select2"
            >
              <option
                selected={true}
              >
                Select 1
              </option>
              <option>
                Select 2
              </option>
              <option>
                Select 3
              </option>
              <option>
                Select 4
              </option>
              <option>
                Select 5
              </option>
              <option>
                Select 6
              </option>
            </select>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-sm-6"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Custom Select
          </label>
          <div
            className="input-holder"
          >
            <div
              className="input-holder"
            >
              <div
                className="ui-select-container ui-select-bootstrap dropdown open"
                onClick={[Function]}
              >
                <div
                  className="ui-select-match"
                >
                  <span
                    className="btn btn-default form-control ui-select-toggle"
                  >
                    <span
                      className="ui-select-placeholder text-muted"
                    />
                    <span
                      className="ui-select-match-text pull-left"
                    >
                      <div
                        className="palette-color"
                      >
                        <div
                          className="palette-color-icon"
                          style={
                            Object {
                              "background": "#0D672F",
                            }
                          }
                        />
                        <div
                          className="palette-color-name"
                        >
                          Green Theme
                        </div>
                      </div>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 col-sm-6"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Select (disabled)
          </label>
          <div
            className="input-holder"
          >
            <div
              className="ui-select-container ui-select-bootstrap dropdown open"
              disabled="disabled"
            >
              <div
                className="ui-select-match"
                disabled="disabled"
              >
                <span
                  className="btn btn-default form-control ui-select-toggle"
                  disabled="disabled"
                >
                  <span
                    className="ui-select-placeholder text-muted"
                  />
                  <span
                    className="ui-select-match-text pull-left"
                  >
                    <div
                      className="palette-color"
                    >
                      <div
                        className="palette-color-icon"
                      />
                      <div
                        className="palette-color-name"
                      >
                        Green Theme
                      </div>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component <Selects /> should renders Selects with props correctly 2`] = `
<div
  className="ui-section"
  id="select"
>
  <strong
    className="ui-title"
  >
    Selects
  </strong>
  <div
    className="form-group-wrapper"
  >
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-sm-6"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Select
          </label>
          <div
            className="input-holder"
          >
            <select
              className="form-control input-sm"
              id="select1"
              name="select1"
            >
              <option
                selected={true}
              >
                Select 1
              </option>
              <option>
                Select 2
              </option>
              <option>
                Select 3
              </option>
              <option>
                Select 4
              </option>
              <option>
                Select 5
              </option>
              <option>
                Select 6
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 col-sm-6"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Select (disabled)
          </label>
          <div
            className="input-holder"
          >
            <select
              className="form-control input-sm"
              disabled={true}
              id="select2"
              name="select2"
            >
              <option
                selected={true}
              >
                Select 1
              </option>
              <option>
                Select 2
              </option>
              <option>
                Select 3
              </option>
              <option>
                Select 4
              </option>
              <option>
                Select 5
              </option>
              <option>
                Select 6
              </option>
            </select>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-sm-6"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Custom Select
          </label>
          <div
            className="input-holder"
          >
            <div
              className="input-holder"
            >
              <div
                className="ui-select-container ui-select-bootstrap dropdown open"
                onClick={[Function]}
              >
                <div
                  className="ui-select-match"
                >
                  <span
                    className="btn btn-default form-control ui-select-toggle"
                  >
                    <span
                      className="ui-select-placeholder text-muted"
                    />
                    <span
                      className="ui-select-match-text pull-left"
                    >
                      <div
                        className="palette-color"
                      >
                        <div
                          className="palette-color-icon"
                          style={
                            Object {
                              "background": "#0D672F",
                            }
                          }
                        />
                        <div
                          className="palette-color-name"
                        >
                          Green Theme
                        </div>
                      </div>
                    </span>
                  </span>
                </div>
                <ul
                  className="ui-select-choices ui-select-choices-content ui-select-dropdown dropdown-menu"
                >
                  <li
                    className="ui-select-choices-group"
                    key="0"
                  >
                    <div
                      className="ui-select-match"
                      onClick={[Function]}
                    >
                      <span
                        className="btn btn-default form-control ui-select-toggle"
                      >
                        <span
                          className="ui-select-placeholder text-muted"
                        />
                        <span
                          className="ui-select-match-text pull-left"
                        >
                          <div
                            className="palette-color"
                          >
                            <div
                              className="palette-color-icon"
                              style={
                                Object {
                                  "background": "#0D672F",
                                }
                              }
                            />
                            <div
                              className="palette-color-name"
                            >
                              Green Theme
                            </div>
                          </div>
                        </span>
                      </span>
                    </div>
                  </li>
                  <li
                    className="ui-select-choices-group"
                    key="1"
                  >
                    <div
                      className="ui-select-match"
                      onClick={[Function]}
                    >
                      <span
                        className="btn btn-default form-control ui-select-toggle"
                      >
                        <span
                          className="ui-select-placeholder text-muted"
                        />
                        <span
                          className="ui-select-match-text pull-left"
                        >
                          <div
                            className="palette-color"
                          >
                            <div
                              className="palette-color-icon"
                              style={
                                Object {
                                  "background": "red",
                                }
                              }
                            />
                            <div
                              className="palette-color-name"
                            >
                              Red Theme
                            </div>
                          </div>
                        </span>
                      </span>
                    </div>
                  </li>
                  <li
                    className="ui-select-choices-group"
                    key="2"
                  >
                    <div
                      className="ui-select-match"
                      onClick={[Function]}
                    >
                      <span
                        className="btn btn-default form-control ui-select-toggle"
                      >
                        <span
                          className="ui-select-placeholder text-muted"
                        />
                        <span
                          className="ui-select-match-text pull-left"
                        >
                          <div
                            className="palette-color"
                          >
                            <div
                              className="palette-color-icon"
                              style={
                                Object {
                                  "background": "blue",
                                }
                              }
                            />
                            <div
                              className="palette-color-name"
                            >
                              Blue Theme
                            </div>
                          </div>
                        </span>
                      </span>
                    </div>
                  </li>
                  <li
                    className="ui-select-choices-group"
                    key="3"
                  >
                    <div
                      className="ui-select-match"
                      onClick={[Function]}
                    >
                      <span
                        className="btn btn-default form-control ui-select-toggle"
                      >
                        <span
                          className="ui-select-placeholder text-muted"
                        />
                        <span
                          className="ui-select-match-text pull-left"
                        >
                          <div
                            className="palette-color"
                          >
                            <div
                              className="palette-color-icon"
                              style={
                                Object {
                                  "background": "brown",
                                }
                              }
                            />
                            <div
                              className="palette-color-name"
                            >
                              Brown Theme
                            </div>
                          </div>
                        </span>
                      </span>
                    </div>
                  </li>
                  <li
                    className="ui-select-choices-group"
                    key="4"
                  >
                    <div
                      className="ui-select-match"
                      onClick={[Function]}
                    >
                      <span
                        className="btn btn-default form-control ui-select-toggle"
                      >
                        <span
                          className="ui-select-placeholder text-muted"
                        />
                        <span
                          className="ui-select-match-text pull-left"
                        >
                          <div
                            className="palette-color"
                          >
                            <div
                              className="palette-color-icon"
                              style={
                                Object {
                                  "background": "yellow",
                                }
                              }
                            />
                            <div
                              className="palette-color-name"
                            >
                              Yellow Theme
                            </div>
                          </div>
                        </span>
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 col-sm-6"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Select (disabled)
          </label>
          <div
            className="input-holder"
          >
            <div
              className="ui-select-container ui-select-bootstrap dropdown open"
              disabled="disabled"
            >
              <div
                className="ui-select-match"
                disabled="disabled"
              >
                <span
                  className="btn btn-default form-control ui-select-toggle"
                  disabled="disabled"
                >
                  <span
                    className="ui-select-placeholder text-muted"
                  />
                  <span
                    className="ui-select-match-text pull-left"
                  >
                    <div
                      className="palette-color"
                    >
                      <div
                        className="palette-color-icon"
                      />
                      <div
                        className="palette-color-name"
                      >
                        Green Theme
                      </div>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component <Selects /> should renders Selects with props correctly 3`] = `
<div
  className="ui-section"
  id="select"
>
  <strong
    className="ui-title"
  >
    Selects
  </strong>
  <div
    className="form-group-wrapper"
  >
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-sm-6"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Select
          </label>
          <div
            className="input-holder"
          >
            <select
              className="form-control input-sm"
              id="select1"
              name="select1"
            >
              <option
                selected={true}
              >
                Select 1
              </option>
              <option>
                Select 2
              </option>
              <option>
                Select 3
              </option>
              <option>
                Select 4
              </option>
              <option>
                Select 5
              </option>
              <option>
                Select 6
              </option>
            </select>
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 col-sm-6"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Select (disabled)
          </label>
          <div
            className="input-holder"
          >
            <select
              className="form-control input-sm"
              disabled={true}
              id="select2"
              name="select2"
            >
              <option
                selected={true}
              >
                Select 1
              </option>
              <option>
                Select 2
              </option>
              <option>
                Select 3
              </option>
              <option>
                Select 4
              </option>
              <option>
                Select 5
              </option>
              <option>
                Select 6
              </option>
            </select>
          </div>
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-xs-12 col-sm-6"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Custom Select
          </label>
          <div
            className="input-holder"
          >
            <div
              className="input-holder"
            >
              <div
                className="ui-select-container ui-select-bootstrap dropdown open"
                onClick={[Function]}
              >
                <div
                  className="ui-select-match"
                >
                  <span
                    className="btn btn-default form-control ui-select-toggle"
                  >
                    <span
                      className="ui-select-placeholder text-muted"
                    />
                    <span
                      className="ui-select-match-text pull-left"
                    >
                      <div
                        className="palette-color"
                      >
                        <div
                          className="palette-color-icon"
                          style={
                            Object {
                              "background": "#0D672F",
                            }
                          }
                        />
                        <div
                          className="palette-color-name"
                        >
                          Green Theme
                        </div>
                      </div>
                    </span>
                  </span>
                </div>
                <ul
                  className="ui-select-choices ui-select-choices-content ui-select-dropdown dropdown-menu"
                >
                  <li
                    className="ui-select-choices-group"
                    key="0"
                  >
                    <div
                      className="ui-select-match"
                      onClick={[Function]}
                    >
                      <span
                        className="btn btn-default form-control ui-select-toggle"
                      >
                        <span
                          className="ui-select-placeholder text-muted"
                        />
                        <span
                          className="ui-select-match-text pull-left"
                        >
                          <div
                            className="palette-color"
                          >
                            <div
                              className="palette-color-icon"
                              style={
                                Object {
                                  "background": "#0D672F",
                                }
                              }
                            />
                            <div
                              className="palette-color-name"
                            >
                              Green Theme
                            </div>
                          </div>
                        </span>
                      </span>
                    </div>
                  </li>
                  <li
                    className="ui-select-choices-group"
                    key="1"
                  >
                    <div
                      className="ui-select-match"
                      onClick={[Function]}
                    >
                      <span
                        className="btn btn-default form-control ui-select-toggle"
                      >
                        <span
                          className="ui-select-placeholder text-muted"
                        />
                        <span
                          className="ui-select-match-text pull-left"
                        >
                          <div
                            className="palette-color"
                          >
                            <div
                              className="palette-color-icon"
                              style={
                                Object {
                                  "background": "red",
                                }
                              }
                            />
                            <div
                              className="palette-color-name"
                            >
                              Red Theme
                            </div>
                          </div>
                        </span>
                      </span>
                    </div>
                  </li>
                  <li
                    className="ui-select-choices-group"
                    key="2"
                  >
                    <div
                      className="ui-select-match"
                      onClick={[Function]}
                    >
                      <span
                        className="btn btn-default form-control ui-select-toggle"
                      >
                        <span
                          className="ui-select-placeholder text-muted"
                        />
                        <span
                          className="ui-select-match-text pull-left"
                        >
                          <div
                            className="palette-color"
                          >
                            <div
                              className="palette-color-icon"
                              style={
                                Object {
                                  "background": "blue",
                                }
                              }
                            />
                            <div
                              className="palette-color-name"
                            >
                              Blue Theme
                            </div>
                          </div>
                        </span>
                      </span>
                    </div>
                  </li>
                  <li
                    className="ui-select-choices-group"
                    key="3"
                  >
                    <div
                      className="ui-select-match"
                      onClick={[Function]}
                    >
                      <span
                        className="btn btn-default form-control ui-select-toggle"
                      >
                        <span
                          className="ui-select-placeholder text-muted"
                        />
                        <span
                          className="ui-select-match-text pull-left"
                        >
                          <div
                            className="palette-color"
                          >
                            <div
                              className="palette-color-icon"
                              style={
                                Object {
                                  "background": "brown",
                                }
                              }
                            />
                            <div
                              className="palette-color-name"
                            >
                              Brown Theme
                            </div>
                          </div>
                        </span>
                      </span>
                    </div>
                  </li>
                  <li
                    className="ui-select-choices-group"
                    key="4"
                  >
                    <div
                      className="ui-select-match"
                      onClick={[Function]}
                    >
                      <span
                        className="btn btn-default form-control ui-select-toggle"
                      >
                        <span
                          className="ui-select-placeholder text-muted"
                        />
                        <span
                          className="ui-select-match-text pull-left"
                        >
                          <div
                            className="palette-color"
                          >
                            <div
                              className="palette-color-icon"
                              style={
                                Object {
                                  "background": "yellow",
                                }
                              }
                            />
                            <div
                              className="palette-color-name"
                            >
                              Yellow Theme
                            </div>
                          </div>
                        </span>
                      </span>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="col-xs-12 col-sm-6"
      >
        <div
          className="form-group"
        >
          <label
            className="control-label"
          >
            Select (disabled)
          </label>
          <div
            className="input-holder"
          >
            <div
              className="ui-select-container ui-select-bootstrap dropdown open"
              disabled="disabled"
            >
              <div
                className="ui-select-match"
                disabled="disabled"
              >
                <span
                  className="btn btn-default form-control ui-select-toggle"
                  disabled="disabled"
                >
                  <span
                    className="ui-select-placeholder text-muted"
                  />
                  <span
                    className="ui-select-match-text pull-left"
                  >
                    <div
                      className="palette-color"
                    >
                      <div
                        className="palette-color-icon"
                      />
                      <div
                        className="palette-color-name"
                      >
                        Green Theme
                      </div>
                    </div>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
